# iKalibr

./: CMakeLists.txt
config/: config_direct_file_example.yaml
exe/solver/: main.cpp
include/calib/: calib_data_manager.h
include/config/: configor.h
include/sensor/: camera_data_loader.h  depth_data_loader.h  event_data_loader.h  imu_data_loader.h  lidar_data_loader.h  radar_data_loader.h
include/util/: cloud_define.hpp  utils.h  utils_tpl.hpp
src/calib/: calib_data_manager.cpp
src/config/: configor.cpp
src/sensor/: camera_data_loader.cpp  depth_data_loader.cpp  event_data_loader.cpp  imu_data_loader.cpp  lidar_data_loader.cpp  radar_data_loader.cpp
src/solver/: calib_solver_common_impl.cpp
